Add: Comprehensive debug logging for BG removal process to trace why processing not starting

--- a/background-workspace.html
+++ b/background-workspace.html
@@ -1653,6 +1653,7 @@
         
         // Click to process single image
         frame.onclick = () => {
+          console.log('🖱️ Image clicked in grid, processing image at index:', index);
           processSingleImage(index);
         };
         
