Move upload text above upload bar, simplify layout

--- a/background-remover.html
+++ b/background-remover.html
@@ -181,9 +181,9 @@
 
   <section class="hero">
     <div class="container">
-      <div class="hero-content">
-        <h1>Upload your image to remove the background</h1>
-        <p>Fast, private, and AI powered. Drop a file or use the button below to get started.</p>
+      <div style="text-align: center; margin-bottom: 24px;">
+        <h1 style="font-size: 2rem; color: var(--dark); margin-bottom: 8px;">Upload your image to remove the background</h1>
+        <p style="font-size: 1rem; color: var(--muted);">Fast, private, and AI powered. Drop a file or use the button below to get started.</p>
       </div>
       <div class="upload-card" id="dropzone">
         <i class="fas fa-cloud-upload-alt"></i>
