--- a/background-remover.html
+++ b/background-remover.html
@@ -31,11 +31,8 @@
     .dropdown-content { display: none; position: absolute; top: 100%; left: 0; min-width: 220px; background: #fff; border-radius: 14px; padding: 12px 0; box-shadow: 0 16px 40px rgba(11, 24, 71, 0.12); }
     .dropdown:hover .dropdown-content { display: block; }
     .dropdown-content a { display: block; padding: 10px 20px; color: var(--dark); text-decoration: none; }
-    .hero { padding: 70px 0; }
-    .hero .container { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 32px; align-items: center; }
-    .hero-content { text-align: left; }
-    .hero-content h1 { font-size: 2.6rem; color: #0f1a4d; margin-bottom: 12px; }
-    .hero-content p { font-size: 1.05rem; color: var(--muted); max-width: 480px; }
+    .hero { padding: 40px 0; }
+    .hero .container { max-width: 800px; }
     .upload-card { background: var(--surface); border-radius: 24px; padding: 36px 28px; box-shadow: 0 24px 60px rgba(16, 35, 96, 0.12); border: 1px dashed rgba(67, 97, 238, 0.25); display: flex; flex-direction: column; gap: 16px; align-items: center; justify-content: center; cursor: pointer; transition: transform 0.2s, box-shadow 0.2s, border-color 0.2s; text-align: center; position: relative; }
     .upload-card i { font-size: 52px; color: var(--primary); }
     .upload-card h2 { font-size: 1.3rem; color: #141d4f; }
