--- a/background-remover.html
+++ b/background-remover.html
@@ -65,6 +65,7 @@
       header { position: relative; }
       .hero { padding: 50px 0; }
       .upload-card { padding: 32px 20px; }
+      .hero .container > div[style*="grid"] { grid-template-columns: 1fr !important; }
     }
   </style>
     
