--- a/background-remover.html
+++ b/background-remover.html
@@ -183,14 +183,19 @@
         <h1 style="font-size: 2rem; color: var(--dark); margin-bottom: 8px;">Upload your image to remove the background</h1>
         <p style="font-size: 1rem; color: var(--muted);">Fast, private, and AI powered. Drop a file or use the button below to get started.</p>
       </div>
-      <div class="upload-card" id="dropzone">
+      <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 32px; align-items: start; margin-bottom: 32px;">
+        <div class="upload-card" id="dropzone">
         <i class="fas fa-cloud-upload-alt"></i>
         <h2>Drag & drop your JPG/PNG</h2>
         <p>Max 10MB â¢ Works entirely in your browser</p>
         <button class="btn btn-primary" type="button" id="browseBtn"><i class="fas fa-upload"></i> Choose Image</button>
         <input type="file" id="imageInput" accept="image/png,image/jpeg" hidden>
         <div id="statusMessage" style="margin-top: 16px; min-height: 1.2rem; font-size: 0.92rem; color: var(--muted);"></div>
-        <div id="errorBox" style="display: none; margin-top: 12px; padding: 12px; background: rgba(255,0,0,0.1); color: #cc0000; border-radius: 8px; font-size: 0.9rem;"></div>
+          <div id="errorBox" style="display: none; margin-top: 12px; padding: 12px; background: rgba(255,0,0,0.1); color: #cc0000; border-radius: 8px; font-size: 0.9rem;"></div>
+        </div>
+        <div style="display: flex; align-items: center; justify-content: center;">
+          <img src="images/bg-removal-city-demo.svg" alt="Background Removal Demo" style="max-width: 100%; height: auto; border-radius: 12px;">
+        </div>
       </div>
       <div style="margin-top: 24px; display: none;" id="previewContainer">
         <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-top: 20px;">
