Fix: Add grid layout with left image and 8cm x 8cm upload bar to uploadSection

--- a/background-remover.html
+++ b/background-remover.html
@@ -189,7 +189,11 @@
         <p style="font-size: 1rem; color: var(--muted);">Fast, private, and AI powered. Drop a file or use the button below to get started.</p>
       </div>
       <div id="uploadSection">
-        <div class="upload-card" id="dropzone">
+        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 32px; align-items: start; margin-bottom: 32px;">
+          <div style="display: flex; align-items: center; justify-content: center;">
+            <img src="images/bg-removal-city-demo.svg" alt="Background Removal Demo" style="max-width: 100%; height: auto; border-radius: 12px;">
+          </div>
+          <div class="upload-card" id="dropzone" style="width: 8cm; height: 8cm; min-width: 8cm; min-height: 8cm; max-width: 8cm; max-height: 8cm; padding: 16px; display: flex; flex-direction: column; align-items: center; justify-content: center; position: relative; overflow: hidden;">
         <i class="fas fa-cloud-upload-alt"></i>
         <h2>Drag & drop your JPG/PNG</h2>
         <p>Max 10MB â¢ Works entirely in your browser</p>
