--- a/background-remover.html
+++ b/background-remover.html
@@ -214,11 +214,14 @@
           <div style="display: flex; align-items: center; justify-content: center;">
             <img src="images/bg-removal-city-demo.svg" alt="Background Removal Demo" style="max-width: 100%; height: auto; border-radius: 12px;">
           </div>
-          <div style="position: relative; width: 12cm; height: 10cm; min-width: 12cm; min-height: 10cm; max-width: 12cm; max-height: 10cm; border-radius: 24px; overflow: hidden; box-shadow: 0 24px 60px rgba(16, 35, 96, 0.12); background: #fff;">
-            <img id="resultImage" style="width: 100%; height: 100%; object-fit: contain; display: block;" alt="Result">
-            <div style="position: absolute; top: 8px; right: 8px; display: flex; gap: 8px; flex-direction: column;">
-              <button id="downloadBtn" class="btn btn-primary" style="background: rgba(67, 97, 238, 0.95); backdrop-filter: blur(10px); border: none; padding: 8px 16px; border-radius: 999px; color: #fff; font-weight: 600; cursor: pointer; box-shadow: 0 4px 12px rgba(0,0,0,0.15); font-size: 0.85rem;" disabled><i class="fas fa-download"></i> Download</button>
-              <button id="newUploadBtn" class="btn btn-primary" style="background: linear-gradient(135deg, #4361ee, #3a0ca3); border: none; padding: 8px 16px; border-radius: 50%; width: 40px; height: 40px; display: inline-flex; align-items: center; justify-content: center; cursor: pointer; box-shadow: 0 4px 12px rgba(67, 97, 238, 0.3); font-size: 18px; color: #fff;" title="Upload New Image"><i class="fas fa-plus"></i></button>
+          <div style="display: flex; flex-direction: column; align-items: center;">
+            <div style="position: relative; width: 12cm; height: 10cm; min-width: 12cm; min-height: 10cm; max-width: 12cm; max-height: 10cm; border-radius: 24px; overflow: hidden; box-shadow: 0 24px 60px rgba(16, 35, 96, 0.12); background: #fff; margin-bottom: 16px;">
+              <img id="resultImage" style="width: 100%; height: 100%; object-fit: contain; display: block;" alt="Result">
+            </div>
+            <div style="display: flex; gap: 12px; align-items: center; justify-content: center; flex-wrap: wrap;">
+              <button id="downloadBtn" class="btn btn-primary" style="background: rgba(67, 97, 238, 0.95); border: none; padding: 10px 20px; border-radius: 8px; color: #fff; font-weight: 600; cursor: pointer; box-shadow: 0 4px 12px rgba(0,0,0,0.15); font-size: 0.9rem; display: inline-flex; align-items: center; gap: 8px;" disabled><i class="fas fa-download"></i> Download</button>
+              <a href="background-style.html" class="btn btn-primary" style="background: linear-gradient(135deg, #4361ee, #3a0ca3); border: none; padding: 10px 20px; border-radius: 8px; color: #fff; font-weight: 600; cursor: pointer; box-shadow: 0 4px 12px rgba(67, 97, 238, 0.3); font-size: 0.9rem; text-decoration: none; display: inline-flex; align-items: center; gap: 8px;"><i class="fas fa-image"></i> Background</a>
+              <button id="newUploadBtn" class="btn btn-primary" style="background: linear-gradient(135deg, #4361ee, #3a0ca3); border: none; padding: 10px 16px; border-radius: 50%; width: 44px; height: 44px; display: inline-flex; align-items: center; justify-content: center; cursor: pointer; box-shadow: 0 4px 12px rgba(67, 97, 238, 0.3); font-size: 20px; color: #fff;" title="Upload New Image"><i class="fas fa-plus"></i></button>
             </div>
           </div>
         </div>
