--- a/background-remover.html
+++ b/background-remover.html
@@ -198,10 +198,8 @@
               <img id="previewImg" style="width: 100%; height: 100%; object-fit: contain;" alt="Preview">
             </div>
             <div id="uploadContent" style="position: relative; z-index: 2; text-align: center;">
-              <i class="fas fa-cloud-upload-alt"></i>
-              <h2 style="font-size: 1rem; margin: 8px 0 4px;">Drag & drop</h2>
-              <p style="font-size: 0.85rem; margin: 0 0 12px;">Max 10MB</p>
-              <button class="btn btn-primary" type="button" id="browseBtn" style="padding: 8px 16px; font-size: 0.9rem;"><i class="fas fa-upload"></i> Choose</button>
+              <h1 style="font-size: 2.5rem; font-weight: bold; color: #000; margin: 0 0 24px; padding: 0;">Upload</h1>
+              <button class="btn btn-primary" type="button" id="browseBtn" style="padding: 12px 24px; font-size: 1rem; font-weight: 600; background: #4361ee; color: #fff; border: none; border-radius: 8px; cursor: pointer; box-shadow: 0 4px 12px rgba(67, 97, 238, 0.3);">Upload</button>
               <input type="file" id="imageInput" accept="image/png,image/jpeg" hidden>
             </div>
             <div id="statusMessage" style="margin-top: 8px; min-height: 1rem; font-size: 0.8rem; color: var(--muted); position: relative; z-index: 2;"></div>
