--- a/background-remover.html
+++ b/background-remover.html
@@ -188,17 +188,23 @@
         <h1 style="font-size: 2rem; color: var(--dark); margin-bottom: 8px;">Upload your image to remove the background</h1>
         <p style="font-size: 1rem; color: var(--muted);">Fast, private, and AI powered. Drop a file or use the button below to get started.</p>
       </div>
+      <div style="display: flex; gap: 12px; justify-content: center; align-items: center; flex-wrap: wrap; margin-bottom: 24px;">
+        <button id="downloadBtn" class="btn btn-primary" style="background: rgba(67, 97, 238, 0.95); border: none; padding: 10px 20px; border-radius: 8px; color: #fff; font-weight: 600; cursor: pointer; box-shadow: 0 4px 12px rgba(0,0,0,0.15); font-size: 0.9rem; display: inline-flex; align-items: center; gap: 8px;" disabled><i class="fas fa-download"></i> Download</button>
+        <a href="background-style.html" class="btn btn-primary" style="background: linear-gradient(135deg, #4361ee, #3a0ca3); border: none; padding: 10px 20px; border-radius: 8px; color: #fff; font-weight: 600; cursor: pointer; box-shadow: 0 4px 12px rgba(67, 97, 238, 0.3); font-size: 0.9rem; text-decoration: none; display: inline-flex; align-items: center; gap: 8px;"><i class="fas fa-image"></i> Background</a>
+        <button id="undoBtn" class="btn btn-primary" style="background: #6c757d; border: none; padding: 10px 20px; border-radius: 8px; color: #fff; font-weight: 600; cursor: pointer; box-shadow: 0 4px 12px rgba(0,0,0,0.15); font-size: 0.9rem; display: inline-flex; align-items: center; gap: 8px;" disabled><i class="fas fa-undo"></i> Undo</button>
+        <button id="redoBtn" class="btn btn-primary" style="background: #6c757d; border: none; padding: 10px 20px; border-radius: 8px; color: #fff; font-weight: 600; cursor: pointer; box-shadow: 0 4px 12px rgba(0,0,0,0.15); font-size: 0.9rem; display: inline-flex; align-items: center; gap: 8px;" disabled><i class="fas fa-redo"></i> Redo</button>
+        <a href="background-workspace.html" class="btn btn-primary" style="background: linear-gradient(135deg, #f093fb, #f5576c); border: none; padding: 10px 20px; border-radius: 8px; color: #fff; font-weight: 600; cursor: pointer; box-shadow: 0 4px 12px rgba(245, 87, 108, 0.3); font-size: 0.9rem; text-decoration: none; display: inline-flex; align-items: center; gap: 8px;"><i class="fas fa-crown"></i> Premium HD Download</a>
+      </div>
       <div id="uploadSection">
         <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 32px; align-items: start; margin-bottom: 32px;">
           <div style="display: flex; align-items: center; justify-content: center;">
             <img src="images/bg-removal-city-demo.svg" alt="Background Removal Demo" style="max-width: 100%; height: auto; border-radius: 12px;">
           </div>
-          <div class="upload-card" id="dropzone" style="width: 12cm; height: 10cm; min-width: 12cm; min-height: 10cm; max-width: 12cm; max-height: 10cm; padding: 16px; display: flex; flex-direction: column; align-items: center; justify-content: center; position: relative; overflow: hidden;">
+          <div class="upload-card" id="dropzone" style="width: 8cm; height: 8cm; min-width: 8cm; min-height: 8cm; max-width: 8cm; max-height: 8cm; padding: 16px; display: flex; flex-direction: column; align-items: center; justify-content: center; position: relative; overflow: hidden;">
             <div id="imagePreview" style="display: none; position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 1;">
               <img id="previewImg" style="width: 100%; height: 100%; object-fit: contain;" alt="Preview">
             </div>
             <div id="uploadContent" style="position: relative; z-index: 2; text-align: center;">
-              <h1 style="font-size: 2.5rem; font-weight: bold; color: #000; margin: 0 0 24px; padding: 0;">Upload</h1>
               <button class="btn btn-primary" type="button" id="browseBtn" style="padding: 12px 24px; font-size: 1rem; font-weight: 600; background: #4361ee; color: #fff; border: none; border-radius: 8px; cursor: pointer; box-shadow: 0 4px 12px rgba(67, 97, 238, 0.3);">Upload</button>
               <input type="file" id="imageInput" accept="image/png,image/jpeg" hidden>
             </div>
@@ -212,14 +218,16 @@
           <div style="display: flex; align-items: center; justify-content: center;">
             <img src="images/bg-removal-city-demo.svg" alt="Background Removal Demo" style="max-width: 100%; height: auto; border-radius: 12px;">
           </div>
-          <div style="display: flex; flex-direction: column; align-items: center;">
-            <div style="position: relative; width: 12cm; height: 10cm; min-width: 12cm; min-height: 10cm; max-width: 12cm; max-height: 10cm; border-radius: 24px; overflow: hidden; box-shadow: 0 24px 60px rgba(16, 35, 96, 0.12); background: #fff; margin-bottom: 16px;">
-              <img id="resultImage" style="width: 100%; height: 100%; object-fit: contain; display: block;" alt="Result">
-            </div>
-            <div style="display: flex; gap: 12px; align-items: center; justify-content: center; flex-wrap: wrap;">
-              <button id="downloadBtn" class="btn btn-primary" style="background: rgba(67, 97, 238, 0.95); border: none; padding: 10px 20px; border-radius: 8px; color: #fff; font-weight: 600; cursor: pointer; box-shadow: 0 4px 12px rgba(0,0,0,0.15); font-size: 0.9rem; display: inline-flex; align-items: center; gap: 8px;" disabled><i class="fas fa-download"></i> Download</button>
-              <a href="background-style.html" class="btn btn-primary" style="background: linear-gradient(135deg, #4361ee, #3a0ca3); border: none; padding: 10px 20px; border-radius: 8px; color: #fff; font-weight: 600; cursor: pointer; box-shadow: 0 4px 12px rgba(67, 97, 238, 0.3); font-size: 0.9rem; text-decoration: none; display: inline-flex; align-items: center; gap: 8px;"><i class="fas fa-image"></i> Background</a>
-              <button id="newUploadBtn" class="btn btn-primary" style="background: linear-gradient(135deg, #4361ee, #3a0ca3); border: none; padding: 10px 16px; border-radius: 50%; width: 44px; height: 44px; display: inline-flex; align-items: center; justify-content: center; cursor: pointer; box-shadow: 0 4px 12px rgba(67, 97, 238, 0.3); font-size: 20px; color: #fff;" title="Upload New Image"><i class="fas fa-plus"></i></button>
+          <div style="position: relative; width: 8cm; height: 8cm; min-width: 8cm; min-height: 8cm; max-width: 8cm; max-height: 8cm; border-radius: 24px; overflow: hidden; box-shadow: 0 24px 60px rgba(16, 35, 96, 0.12); background: #fff;">
+            <img id="resultImage" style="width: 100%; height: 100%; object-fit: contain; display: block; opacity: 1; transition: opacity 0.3s ease;" alt="Result">
+            <img id="beforeImage" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: contain; display: none; opacity: 0; transition: opacity 0.3s ease;" alt="Before">
+            <div id="beforeAfterToggle" style="position: absolute; bottom: 12px; right: 12px; display: none; z-index: 10;">
+              <div style="background: rgba(255, 255, 255, 0.95); border-radius: 24px; padding: 4px; box-shadow: 0 4px 12px rgba(0,0,0,0.2); display: flex; align-items: center; gap: 4px;">
+                <span id="toggleText" style="padding: 0 12px; font-size: 0.85rem; font-weight: 600; color: #333; min-width: 50px; text-align: center;">After</span>
+                <div style="position: relative; width: 80px; height: 32px; background: #e0e0e0; border-radius: 16px; cursor: pointer; transition: background 0.3s;">
+                  <div id="toggleSlider" style="position: absolute; top: 2px; right: 2px; width: 28px; height: 28px; background: #4361ee; border-radius: 50%; transition: transform 0.3s ease; box-shadow: 0 2px 4px rgba(0,0,0,0.2); transform: translateX(0);"></div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
