--- a/background-remover.html
+++ b/background-remover.html
@@ -218,17 +218,20 @@
           <div style="display: flex; align-items: center; justify-content: center;">
             <img src="images/bg-removal-city-demo.svg" alt="Background Removal Demo" style="max-width: 100%; height: auto; border-radius: 12px;">
           </div>
-          <div style="position: relative; width: 8cm; height: 8cm; min-width: 8cm; min-height: 8cm; max-width: 8cm; max-height: 8cm; border-radius: 24px; overflow: hidden; box-shadow: 0 24px 60px rgba(16, 35, 96, 0.12); background: #fff;">
-            <img id="resultImage" style="width: 100%; height: 100%; object-fit: contain; display: block; opacity: 1; transition: opacity 0.3s ease;" alt="Result">
-            <img id="beforeImage" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: contain; display: none; opacity: 0; transition: opacity 0.3s ease;" alt="Before">
-            <div id="beforeAfterToggle" style="position: absolute; bottom: 12px; right: 12px; display: none; z-index: 10;">
-              <div style="background: rgba(255, 255, 255, 0.95); border-radius: 24px; padding: 4px; box-shadow: 0 4px 12px rgba(0,0,0,0.2); display: flex; align-items: center; gap: 4px;">
-                <span id="toggleText" style="padding: 0 12px; font-size: 0.85rem; font-weight: 600; color: #333; min-width: 50px; text-align: center;">After</span>
-                <div style="position: relative; width: 80px; height: 32px; background: #e0e0e0; border-radius: 16px; cursor: pointer; transition: background 0.3s;">
-                  <div id="toggleSlider" style="position: absolute; top: 2px; right: 2px; width: 28px; height: 28px; background: #4361ee; border-radius: 50%; transition: transform 0.3s ease; box-shadow: 0 2px 4px rgba(0,0,0,0.2); transform: translateX(0);"></div>
+          <div style="display: flex; flex-direction: column; align-items: center; gap: 16px;">
+            <div style="position: relative; width: 8cm; height: 8cm; min-width: 8cm; min-height: 8cm; max-width: 8cm; max-height: 8cm; border-radius: 24px; overflow: hidden; box-shadow: 0 24px 60px rgba(16, 35, 96, 0.12); background: #fff;">
+              <img id="resultImage" style="width: 100%; height: 100%; object-fit: contain; display: block; opacity: 1; transition: opacity 0.3s ease;" alt="Result">
+              <img id="beforeImage" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: contain; display: none; opacity: 0; transition: opacity 0.3s ease;" alt="Before">
+              <div id="beforeAfterToggle" style="position: absolute; bottom: 12px; right: 12px; display: none; z-index: 10;">
+                <div style="background: rgba(255, 255, 255, 0.95); border-radius: 24px; padding: 4px; box-shadow: 0 4px 12px rgba(0,0,0,0.2); display: flex; align-items: center; gap: 4px;">
+                  <span id="toggleText" style="padding: 0 12px; font-size: 0.85rem; font-weight: 600; color: #333; min-width: 50px; text-align: center;">After</span>
+                  <div style="position: relative; width: 80px; height: 32px; background: #e0e0e0; border-radius: 16px; cursor: pointer; transition: background 0.3s;">
+                    <div id="toggleSlider" style="position: absolute; top: 2px; right: 2px; width: 28px; height: 28px; background: #4361ee; border-radius: 50%; transition: transform 0.3s ease; box-shadow: 0 2px 4px rgba(0,0,0,0.2); transform: translateX(0);"></div>
+                  </div>
                 </div>
               </div>
             </div>
+            <button id="newUploadBtn" class="btn btn-primary" style="background: linear-gradient(135deg, #4361ee, #3a0ca3); border: none; padding: 12px 24px; border-radius: 50%; width: 50px; height: 50px; display: inline-flex; align-items: center; justify-content: center; cursor: pointer; box-shadow: 0 4px 12px rgba(67, 97, 238, 0.3); font-size: 24px; color: #fff;" title="Upload New Image"><i class="fas fa-plus"></i></button>
           </div>
         </div>
       </div>
