Move 'Why it's awesome' section inside image frame below image

--- a/background-remover.html
+++ b/background-remover.html
@@ -248,6 +248,16 @@
                 </div>
               </div>
               <button id="newUploadBtn" class="btn btn-primary" style="background: linear-gradient(135deg, #4361ee, #3a0ca3); border: none; padding: 12px 24px; border-radius: 50%; width: 50px; height: 50px; display: inline-flex; align-items: center; justify-content: center; cursor: pointer; box-shadow: 0 4px 12px rgba(67, 97, 238, 0.3); font-size: 24px; color: #fff;" title="Upload New Image"><i class="fas fa-plus"></i></button>
+              
+              <!-- Why it's awesome section - inside image frame -->
+              <div class="quick-help" style="width: 100%; max-width: 8cm; margin-top: 8px;">
+                <h3 style="margin-bottom: 14px; font-size: 1.1rem; color: #141c4d;">Why it's awesome</h3>
+                <ul style="list-style: none; display: flex; flex-direction: column; gap: 10px; color: var(--muted); padding: 0; margin: 0;">
+                  <li style="display: flex; gap: 10px; align-items: center;"><i class="fas fa-check-circle" style="color: var(--primary);"></i> No sign up. Works offline after first load.</li>
+                  <li style="display: flex; gap: 10px; align-items: center;"><i class="fas fa-check-circle" style="color: var(--primary);"></i> Supports photos, products, and portraits.</li>
+                  <li style="display: flex; gap: 10px; align-items: center;"><i class="fas fa-check-circle" style="color: var(--primary);"></i> Next step lets you change backgrounds or colours.</li>
+                </ul>
+              </div>
             </div>
           </div>
           
@@ -281,14 +291,6 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="quick-help">
-        <h3>Why it's awesome</h3>
-        <ul>
-          <li><i class="fas fa-check-circle"></i> No sign up. Works offline after first load.</li>
-          <li><i class="fas fa-check-circle"></i> Supports photos, products, and portraits.</li>
-          <li><i class="fas fa-check-circle"></i> Next step lets you change backgrounds or colours.</li>
-        </ul>
       </div>
     </div>
   </section>
