Replace text with 'AI-powered background removal for images' and remove third-party brand references from footer

--- a/background-remover.html
+++ b/background-remover.html
@@ -200,8 +200,8 @@
   <section class="hero">
     <div class="container">
       <div style="text-align: center; margin-bottom: 24px;">
-        <h1 style="font-size: 2rem; color: var(--dark); margin-bottom: 8px;">Upload your image to remove the background</h1>
-        <p style="font-size: 1rem; color: var(--muted);">Fast, private, and AI powered. Drop a file or use the button below to get started.</p>
+        <h1 style="font-size: 2rem; color: var(--dark); margin-bottom: 8px;">AI-powered background removal for images</h1>
+        <p style="font-size: 1rem; color: var(--muted);">Fast, private, and secure. Drop a file or use the button below to get started.</p>
       </div>
       <div style="display: flex; gap: 12px; justify-content: center; align-items: center; flex-wrap: wrap; margin-bottom: 24px;">
         <button id="editImageBtn" type="button" class="btn btn-primary" style="background: linear-gradient(135deg, #10b981, #059669); border: none; padding: 10px 20px; border-radius: 8px; color: #fff; font-weight: 600; cursor: pointer; box-shadow: 0 4px 12px rgba(16, 185, 129, 0.3); font-size: 0.9rem; display: inline-flex; align-items: center; gap: 8px;"><i class="fas fa-edit"></i> Edit Image</button>
@@ -413,7 +413,7 @@
             </div>
             <p class="footer-brand-line">&copy; easyjpgtopdf &mdash; Free PDF &amp; Image Tools for everyone. All rights reserved.</p>
             <p class="footer-credits">
-                Thanks to Font Awesome, Google Fonts, jsPDF, pdf.js, pdf-lib, Mammoth, Tesseract.js, IMG.LY, Firebase, Unsplash photographers, and every open-source contributor powering this site.
+                Powered by innovative open-source technologies.
                 <a href="attributions.html">See full acknowledgements</a>.
             </p>
         </div>
