--- a/background-remover.html
+++ b/background-remover.html
@@ -83,9 +83,24 @@
     .bg-color-chip { width: 100%; padding-bottom: 100%; border-radius: 16px; position: relative; cursor: pointer; border: 2px solid transparent; box-shadow: 0 12px 25px rgba(16, 32, 70, 0.08); }
     .bg-color-chip .fill { position: absolute; inset: 0; border-radius: 14px; }
     .bg-color-chip.selected { border-color: var(--primary); }
+    /* Download Dropdown Styles */
+    #downloadDropdown {
+      animation: fadeInDown 0.2s ease;
+    }
+    @keyframes fadeInDown {
+      from {
+        opacity: 0;
+        transform: translateY(-10px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
     @media (max-width: 1200px) {
       #resultSection > div[style*="grid-template-columns"] { grid-template-columns: 1fr !important; }
-      #backgroundPickerPanel { width: 100% !important; max-width: 100% !important; position: relative !important; top: 0 !important; margin-top: 24px; }
+      #backgroundPickerPanel, #imageEditorPanel { width: 100% !important; max-width: 100% !important; position: relative !important; top: 0 !important; margin-top: 24px; }
+      #downloadDropdown { left: auto !important; right: 0 !important; }
     }
   </style>
     
