--- a/background-remover.html
+++ b/background-remover.html
@@ -291,7 +291,7 @@
             
             <!-- Right side: Result image frame -->
             <div style="display: flex; flex-direction: column; align-items: center; gap: 16px;">
-              <div style="position: relative; width: 8cm; height: 8cm; min-width: 8cm; min-height: 8cm; max-width: 8cm; max-height: 8cm; border-radius: 24px; overflow: hidden; box-shadow: 0 24px 60px rgba(16, 35, 96, 0.12); background: #fff;">
+              <div style="position: relative; width: 8cm; height: 8cm; min-width: 8cm; min-height: 8cm; max-width: 8cm; max-height: 8cm; border-radius: 24px; overflow: hidden; box-shadow: 0 24px 60px rgba(16, 35, 96, 0.12); background: #f2f2f2; border: 1px solid rgba(0,0,0,0.03);">
                 <img id="resultImage" style="width: 100%; height: 100%; object-fit: contain; display: block; opacity: 1; transition: opacity 0.3s ease;" alt="Result">
                 <img id="beforeImage" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: contain; display: none; opacity: 0; transition: opacity 0.3s ease;" alt="Before">
                 <div id="beforeAfterToggle" style="position: absolute; bottom: 12px; right: 12px; display: none; z-index: 10;">
