fix: Switch back to premium-hd.js and add auto-initialization - Use original premium-hd.js instead of enterprise version - Add auto-initialization for PremiumHDApp - Fix file mismatch issue

--- a/background-workspace.html
+++ b/background-workspace.html
@@ -265,7 +265,7 @@
 </div>
 </section>
 </main>
-  <script type="module" src="js/background-workspace-enterprise.js"></script>
+  <script type="module" src="js/premium-hd.js"></script>
 
     <!-- Download Modal -->
     <div class="download-modal" id="downloadModal">
