Add 500 KB upload limit for free version: Frontend validation in free-preview.js, backend validation in bg-remove-free.js, FAQ update in background-remover.html, blog post update in blog-how-to-remove-background.html

--- a/background-remover.html
+++ b/background-remover.html
@@ -396,6 +396,8 @@
               <li>TIFF</li>
               <li>And more...</li>
             </ul>
+            <p style="margin-top: 15px;"><strong>Free Version Upload Limit:</strong> Maximum file size is 500 KB per image.</p>
+            <p style="margin-top: 10px;"><strong>Premium HD:</strong> No upload size limit (supports up to 25 Megapixels).</p>
             <p style="margin-top: 15px;">Output format is always PNG with transparent background, perfect for use in any design software or website.</p>
           </div>
         </div>
