--- a/blog-how-to-remove-background.html
+++ b/blog-how-to-remove-background.html
@@ -580,10 +580,11 @@
                         <p>Preparation is key to achieving optimal results. Before uploading your files, take a moment to ensure they meet the tool's requirements. Check file formats, sizes, and quality to ensure compatibility and desired outcomes.</p>
                         <p><strong>Preparation Checklist:</strong></p>
                         <ul style="margin: 15px 0; padding-left: 30px; line-height: 1.8;">
-                            <li>Verify file format compatibility</li>
-                            <li>Check file sizes to ensure they're within acceptable limits</li>
+                            <li>Verify file format compatibility (JPG, PNG, WEBP, etc.)</li>
+                            <li><strong>Free Version:</strong> Maximum file size is 500 KB per image</li>
+                            <li><strong>Premium HD:</strong> No upload size limit (up to 25 Megapixels)</li>
                             <li>Review file quality and content before processing</li>
-                            <li>Organize files in the desired order if processing multiple items</li>
+                            <li>Compress large images if needed (for free version)</li>
                             <li>Ensure you have a stable internet connection</li>
                         </ul>
                     </div>
