CRITICAL FIX: Load auth.js as ES module, expose auth globally, fix onAuthStateChanged listener, ensure account section and breadcrumb buttons work on all pages

--- a/pricing.html
+++ b/pricing.html
@@ -831,7 +831,7 @@
         </div>
     </footer>
     <script src="js/global-components.js"></script>
-    <script src="js/auth.js"></script>
+    <script type="module" src="js/auth.js"></script>
     <script>
     (function() {
         function tryLoadComponents() {
