--- a/background-remover.html
+++ b/background-remover.html
@@ -687,7 +687,7 @@
     <!-- Global footer will be loaded here by global-components.js -->
     
     <script src="js/global-components.js"></script>
-    <script src="js/auth.js"></script>
+    <script type="module" src="js/auth.js"></script>
     <script>
     // Ensure header, breadcrumb, and account section load
     (function() {
