--- a/blog.html
+++ b/blog.html
@@ -316,7 +316,7 @@
         </div>
     </footer>
     <script src="js/global-components.js"></script>
-    <script src="js/auth.js"></script>
+    <script type="module" src="js/auth.js"></script>
     <script>
     // Ensure all components load - multiple attempts to guarantee it works
     (function() {
