--- a/resume-maker.html
+++ b/resume-maker.html
@@ -3125,6 +3125,7 @@
         </div>
     </footer>
     <script src="js/global-components.js"></script>
+    <script type="module" src="js/auth.js"></script>
     <script>
     // Ensure header loads - multiple attempts to guarantee it works
     (function() {
