Fix result image display: Force visibility and remove hidden attribute, add cache-busting version

--- a/background-workspace.html
+++ b/background-workspace.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- VERSION: 2025-01-16-v2 - STRICT FILE-ONLY FormData - NO JSON/base64 -->
+<!-- VERSION: 2025-01-16-v3 - Premium HD with blur fixes and result display fix -->
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
