Free version pipeline updates: process_size=768px, output_size=512px, FG threshold=240, BG threshold=15, Feather=OFF, Alpha clamp=ON

--- a/background-remover.html
+++ b/background-remover.html
@@ -150,7 +150,7 @@
             <button id="downloadFree512" style="width: 100%; padding: 16px 20px; border: none; background: transparent; text-align: left; cursor: pointer; transition: background 0.2s; display: flex; align-items: center; gap: 12px; color: var(--dark); font-weight: 600; font-size: 0.95rem;" onmouseover="this.style.background='rgba(67, 97, 238, 0.05)'" onmouseout="this.style.background='transparent'">
               <i class="fas fa-download" style="color: #4361ee; font-size: 1.1rem;"></i>
               <div style="flex: 1;">
-                <div style="font-weight: 600; margin-bottom: 4px;">Download Free 640px</div>
+                <div style="font-weight: 600; margin-bottom: 4px;">Download Free 512px</div>
                 <div style="font-size: 0.8rem; color: var(--muted); font-weight: 400;">Instant download • No login required</div>
               </div>
             </button>
@@ -356,11 +356,11 @@
             <i class="fas fa-chevron-down" style="color: #4361ee; transition: transform 0.3s;"></i>
           </div>
           <div class="faq-answer" style="display: none; padding: 0 20px 20px 20px; color: #56607a; line-height: 1.8;">
-            <p><strong>Free Version (640px):</strong></p>
+            <p><strong>Free Version (512px):</strong></p>
             <ul style="margin: 10px 0; padding-left: 20px;">
-              <li>Maximum resolution: 640px (longest side)</li>
+              <li>Maximum resolution: 512px (longest side)</li>
               <li>Industry-level quality with soft alpha edges</li>
-              <li>Natural edge transitions (1px feather)</li>
+              <li>Sharp edges for human images (feather OFF)</li>
               <li>Perfect for web use, social media, thumbnails</li>
               <li>No hand/body parts cut off</li>
               <li>Complete, trustworthy output</li>
@@ -469,7 +469,7 @@
           <div class="faq-answer" style="display: none; padding: 0 20px 20px 20px; color: #56607a; line-height: 1.8;">
             <p>Processing speed depends on image size and version:</p>
             <ul style="margin: 10px 0; padding-left: 20px;">
-              <li><strong>Free Version (640px):</strong> Typically 2-5 seconds per image</li>
+              <li><strong>Free Version (512px):</strong> Typically 2-5 seconds per image</li>
               <li><strong>Premium HD (2000-4000px):</strong> Typically 5-15 seconds per image (depending on size)</li>
             </ul>
             <p style="margin-top: 15px;">All processing happens on GPU-accelerated servers for maximum speed. You'll see a real-time progress indicator during processing.</p>
@@ -485,10 +485,10 @@
           <div class="faq-answer" style="display: none; padding: 0 20px 20px 20px; color: #56607a; line-height: 1.8;">
             <p>Our Free version uses an optimized formula that provides complete, trustworthy results:</p>
             <ul style="margin: 10px 0; padding-left: 20px;">
-              <li><strong>640px Resolution:</strong> Higher than standard free tools (512px)</li>
+              <li><strong>512px Resolution:</strong> Industry-standard resolution for free tools</li>
               <li><strong>Soft Alpha:</strong> Natural edge transitions without harsh cuts</li>
-              <li><strong>1px Feather:</strong> Smooth edges for professional look</li>
-              <li><strong>No Clamping:</strong> Preserves thin parts like hands, hair, cloth edges</li>
+              <li><strong>Feather OFF:</strong> Sharp edges for precise cutouts (human images)</li>
+              <li><strong>Alpha Clamp ON:</strong> Ensures minimum alpha for consistent edges</li>
               <li><strong>Complete Output:</strong> Never cuts off body parts or important details</li>
               <li><strong>Industry-Level:</strong> Quality that builds trust, not cheap/buggy appearance</li>
             </ul>
