--- a/Indian-style-Resume-generator.html
+++ b/Indian-style-Resume-generator.html
@@ -86,7 +86,7 @@ textarea{min-height:90px}
 .pd-row{display:flex;justify-content:space-between;align-items:center;gap:12px}
 .pd-label{font-weight:600;color:#1f2a4d;font-size:13px}
 .pd-value{font-weight:500;color:#3f4c6b;font-size:13px;text-align:right;flex:1}
-.resume-header-photo{width:96px;height:96px;border-radius:50%;overflow:hidden;border:3px solid rgba(11,25,60,0.12);box-shadow:0 6px 20px rgba(11,25,60,0.08);background:linear-gradient(135deg,#ffffff,#eef3ff);display:flex;align-items:center;justify-content:center}
+.resume-header-photo{width:96px;height:96px;border-radius:0;overflow:hidden;border:3px solid rgba(11,25,60,0.12);box-shadow:0 6px 20px rgba(11,25,60,0.08);background:linear-gradient(135deg,#ffffff,#eef3ff);display:flex;align-items:center;justify-content:center}
 .resume-header-photo img{width:100%;height:100%;object-fit:cover}
 
 .section-title{font-weight:600;margin-bottom:6px;color:var(--accent)}
@@ -216,7 +216,7 @@ th{font-weight:700;background:linear-gradient(90deg,#fff7e6,#fff3d6)}
 
         <label>Photo</label>
         <input type="file" id="photoInput" accept="image/*" />
-        <div style="margin-top:8px"><img id="photoPreview" style="width:120px;height:120px;object-fit:cover;border-radius:8px;border:1px solid #eee" alt="photo"></div>
+        <div style="margin-top:8px"><img id="photoPreview" style="width:120px;height:120px;object-fit:cover;border-radius:0;border:1px solid #eee" alt="photo"></div>
 
         <label>Full name</label>
         <input id="name" placeholder="Your full name">
