--- a/Indian-style-Resume-generator.html
+++ b/Indian-style-Resume-generator.html
@@ -891,7 +891,7 @@ document.getElementById('downloadDoc').addEventListener('click', ()=> {
   .resume-header-photo {
     width: 110px;
     height: 110px;
-    border-radius: 50%;
+    border-radius: 0;
     border: 4px solid rgba(67, 97, 238, 0.3);
     overflow: hidden;
     box-shadow: 0 12px 28px rgba(67, 97, 238, 0.18);
