Clean: Remove all extra/corrupt code below footer, add proper closing tags, fix downloadDoc nameField

--- a/online_resume_maker.html
+++ b/online_resume_maker.html
@@ -714,7 +714,10 @@
         w.document.close();
       });
     }
+</script>
 
-  
-<script src="js/auth.js" type="module"></script>
+<script type="module" src="js/auth.js"></script>
+<script type="module" src="js/global-components.js"></script>
 
+</body>
+</html>
