Add More Resume Style button next to Live Resume Preview heading linking to Indian-style-Resume-generator.html

--- a/resume-maker.html
+++ b/resume-maker.html
@@ -1484,7 +1484,10 @@
             </div>
             
             <div class="preview-section">
-                <h2 class="section-title">Live Resume Preview</h2>
+                <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 15px;">
+                    <h2 class="section-title" style="margin: 0;">Live Resume Preview</h2>
+                    <a href="https://easyjpgtopdf.com/Indian-style-Resume-generator.html" class="btn btn-primary" style="text-decoration: none; padding: 10px 20px; background: #4361ee; color: white; border-radius: 6px; font-weight: 600; transition: background 0.3s;" onmouseover="this.style.background='#3a52d4'" onmouseout="this.style.background='#4361ee'">More Resume Style</a>
+                </div>
                 
                 <div class="resume-preview" id="resumePreview">
                     <div class="resume-preview-header">
